<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/music_wallpaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/music_image" />

    <ImageButton
        android:id="@+id/play_pause_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/play_pause"
        android:cropToPadding="true"
        android:src="@drawable/ic_play_arrow_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <ImageButton
        android:id="@+id/stop_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/stop"
        android:src="@drawable/ic_stop_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/play_pause_button"
        app:layout_constraintStart_toEndOf="@+id/play_pause_button"
        app:layout_constraintTop_toTopOf="@+id/play_pause_button" />

    <ImageButton
        android:id="@+id/mute_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/mute"
        android:src="@drawable/ic_volume_off_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/play_pause_button"
        app:layout_constraintEnd_toStartOf="@+id/play_pause_button"
        app:layout_constraintTop_toTopOf="@+id/play_pause_button" />

    <ImageButton
        android:id="@+id/info_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/info"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_info_outline_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/play_pause_button" />

    <TextView
        android:id="@+id/url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_pause_button" />
</android.support.constraint.ConstraintLayout>
</ScrollView>